feat: now granting reward upon quest completition